Added Cesium Ion token

--- a/tileset-creator/.env.development
+++ b/tileset-creator/.env.development
@@ -1,2 +1,3 @@
 VITE_LOGGER_LEVEL=debug
 VITE_GOOGLE_API_KEY=your-development-api-key-here
+VITE_CESIUM_ION_TOKEN=your-development-cesium-ion-token-here
