Make responsive/mobile-friendly

--- a/tileset-creator/package.json
+++ b/tileset-creator/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@openflam/dnsspatialdiscovery": "^4.4.4",
     "bootstrap": "^5.3.6",
+    "bootstrap-icons": "^1.13.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
