refactor: use dev proxy for mocking

--- a/tileset-creator/.env.production
+++ b/tileset-creator/.env.production
@@ -6,6 +6,5 @@ VITE_MAP_MODE="map-server"
 VITE_DISCOVERY_SUFFIX="loc.open-flame.com."
 
 # Dev map-server mode
-VITE_API_LIST_MAPS="http://localhost:8000/maps"
-VITE_DEFAULT_MAP_SERVER_URL="http://localhost:8000/default_map"
-VITE_USE_MOCK_DATA="false"
+VITE_API_LIST_MAPS="/api/maps"
+VITE_DEFAULT_MAP_SERVER_URL="https://cmu-mapserver.open-flame.com"
