--- a/tileset-creator/package.json
+++ b/tileset-creator/package.json
@@ -36,6 +36,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
-    "vite-plugin-cesium": "^1.2.23"
+    "vite-plugin-cesium": "^1.2.23",
+    "vite-plugin-mock-dev-server": "^2.0.2"
   }
 }
