--- a/tileset-creator/package.json
+++ b/tileset-creator/package.json
@@ -25,6 +25,7 @@
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@vitejs/plugin-react": "^4.4.1",
     "cesium": "^1.129.0",
     "eslint": "^9.25.0",
