--- a/tileset-creator/.env.development
+++ b/tileset-creator/.env.development
@@ -7,5 +7,6 @@ VITE_DISCOVERY_SUFFIX="loc.open-flame.com."
 
 # Dev map-server mode
 VITE_API_LIST_MAPS="/api/maps"
+VITE_MAPS_SERVICES_BASE="/maps"
 # Localhost proxy for development with empty str ""
 VITE_DEFAULT_MAP_SERVER_URL=""
