--- a/tileset-creator/.env.production
+++ b/tileset-creator/.env.production
@@ -7,4 +7,5 @@ VITE_DISCOVERY_SUFFIX="loc.open-flame.com."
 
 # Dev map-server mode
 VITE_API_LIST_MAPS="/api/maps"
+VITE_MAPS_SERVICES_BASE="/maps"
 VITE_DEFAULT_MAP_SERVER_URL="https://cmu-mapserver.open-flame.com"
